# ai-resources-website

./: Project Notes.txt  README(Adding New Models to Website)  README.md  main.py  package-lock.json  pyproject.toml
.github/workflows/: demo.yml
sitedata/: README.md  config.yml  highlighted.csv  papers.csv  papers.yml
static/css/: main.css
static/js/data/: api.js
static/js/views/: papers.js
templates/: base.html  index.html  papers.html  poster.html
