[tool.poetry]
name = "ai resources webpage"
version = "0.1.0"
description = "AI resources webpage for Davis AI"
authors = ["Dave Boku"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.8"
Flask = "^3.0.0"
Frozen-Flask = "^0.18"
Flask-Markdown = "^0.3"
tqdm = "^4.66.1"
PyYAML = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
